fix: Text appears blurred in some environments 🫐

--- a/scss/_footnote.scss
+++ b/scss/_footnote.scss
@@ -27,14 +27,21 @@
   }
 }
 
+@mixin center-by-ratio($width, $margin-ratio: 0.5) {
+  position: absolute;
+  left: 50%;
+  width: $width;
+  margin-left: -($width * $margin-ratio);
+}
+
 .ft-pop {
   color: var(--fg);
   background-color: var(--theme-popup-bg);
-  border: .1rem solid var(--theme-popup-border);
+  border: 0.1rem solid var(--theme-popup-border);
 
-  width: 88vw;
+  @include center-by-ratio(88vw, 0.5);
+
   max-height: 64vw;
-  margin: 1rem auto;
   padding: 1rem 1rem;
   border-radius: .8rem;
   font-size: .64rem;
@@ -42,15 +49,15 @@
   overflow-y: scroll;
 
   position: absolute;
-  transform: translateX(-50%) scale(0.95);
+  transform: scale(0.95);
   left: 50%;
   z-index: 20;
   opacity: 0;
-  transition: opacity 150ms ease, transform 150ms ease;
+  transition: opacity 150ms ease;
 
   &.show {
     opacity: 1;
-    transform: translateX(-50%) scale(1);
+    transform: scale(1);
   }
 
   a {
